azure-key-vault-properties-provider/2.0/modules/ROOT/pages/azure-key-vault-properties-provider-reference.adoc
= Azure Key Vault Properties Provider 2.0 Reference - Mule 4

Azure Key Vault Properties Provider is a configuration that enables you to retrieve your secrets from a secure Azure cloud service before your Mule app runs.

[[Config]]
== Configuration

Default Configuration for Azure Key Vault Properties Provider.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Client Id a| String |  Client ID of your app. |  | x
| Tenant Id a| String |  Tenant ID of your app. |  | x
| Client Secret a| String |  Client secret of your app. |  | x
| Key Vault Name a| String |  Name of the vault that you want to connect. |  | x
| Uri Override a| String |  The URI override for the key vault. |  | 
|===

== Requirements

You must add the following repository and its associated credentials in the Maven settings:

[source,xml,linenums]
----
<repository>
          <id>MuleRepository2</id>
          <name>MuleRepository2</name>
          <url>https://repository.mulesoft.org/nexus/content/repositories/releases-ee/</url>
          <layout>default</layout>
          <releases>
            <enabled>true</enabled>
          </releases>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
</repository>
----
== Limitations

Azure Key Vault Properties Provider doesn't support the use of property files for the configuration of the properties provider. 

== Environment Variables

For authenticating to Azure Key Vault using environment variables, you must set the following environment variables `AZURE_CLIENT_ID`, `AZURE_CLIENT_SECRET`, and `AZURE_TENANT_ID`. Refer to xref:mule-runtime::setting-environment-variables.adoc[] for details.

In addition to setting the three environment variables, in the XML connector configuration you must set the following three attributes with an empty string: `tenantId=""`, `clientId=""`, and `clientSecret=""`.

In the XML configuration, the attributes look like these:
[source,xml,linenums]
----
 <azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"

                        keyVaultName="connectors-vault"
                        tenantId=""
                        clientId=""
                        clientSecret=""/>
----

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
